--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 *.exe
 *.out
 *.app
+Lec02_Ray-Triangle_Intersection.xcodeproj/project.xcworkspace/xcuserdata/fabioguilherme.xcuserdatad/UserInterfaceState.xcuserstate
