--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 *.out
 *.app
 Lec02_Ray-Triangle_Intersection.xcodeproj/project.xcworkspace/xcuserdata/fabioguilherme.xcuserdatad/UserInterfaceState.xcuserstate
+Lec02_Ray-Triangle_Intersection.xcodeproj/project.xcworkspace/xcuserdata/fabioguilherme.xcuserdatad/UserInterfaceState.xcuserstate
